--- a/ch07/7_3.ipynb
+++ b/ch07/7_3.ipynb
@@ -1651,7 +1651,7 @@
     "    def forward(self, xs):\n",
     "        xs = self.embed.forward(xs)\n",
     "        hs = self.lstm.forward(xs)\n",
-    "        self.hs = hs\n",
+    "        self.hs = hs # decoder 로 넘김\n",
     "        return hs[:, -1, :]\n",
     "\n",
     "    def backward(self, dh):\n",
@@ -1684,7 +1684,7 @@
     "            self.params += layer.params\n",
     "            self.grads += layer.grads\n",
     "\n",
-    "    def forward(self, xs, h):\n",
+    "    def forward(self, xs, h): # h = 은닉층에서 넘어온 h, xs = 정답\n",
     "        self.lstm.set_state(h)\n",
     "\n",
     "        out = self.embed.forward(xs)\n",
@@ -1699,7 +1699,7 @@
     "        dh = self.lstm.dh\n",
     "        return dh\n",
     "\n",
-    "    def generate(self, h, start_id, sample_size):\n",
+    "    def generate(self, h, start_id, sample_size): # forward의 스코어를 통해서 생성\n",
     "        sampled = []\n",
     "        sample_id = start_id\n",
     "        self.lstm.set_state(h)\n",
@@ -1710,7 +1710,7 @@
     "            out = self.lstm.forward(out)\n",
     "            score = self.affine.forward(out)\n",
     "\n",
-    "            sample_id = np.argmax(score.flatten())\n",
+    "            sample_id = np.argmax(score.flatten()) # 확률이 제일 높은 애들만 뽑아서 밑에 sampled에 append\n",
     "            sampled.append(int(sample_id))\n",
     "\n",
     "        return sampled\n",
