chapter 10 all updated

--- a/ch08/8_1.ipynb
+++ b/ch08/8_1.ipynb
@@ -91,20 +91,20 @@
     "# a  = np.random.randn(N, T)\n",
     "\n",
     "hs = np.arange(12).reshape(N,T,H)\n",
-    "print(hs)\n",
+    "print(hs) # 3차원 \n",
     "\n",
-    "a  = np.array([[0.8,0.1,0.1]])\n",
+    "a  = np.array([[0.8,0.1,0.1]]) # 확률 or 비율\n",
     "print(a)\n",
     "ar = a.reshape(N, T, 1)\n",
     "print(ar)\n",
-    "ar = ar.repeat(H, axis=2)\n",
+    "ar = ar.repeat(H, axis=2) # 3차원을 기준으로 repeat\n",
     "print(ar)\n",
     "\n",
     "t = hs * ar\n",
     "print(t)\n",
     "\n",
     "c = np.sum(t, axis=1)\n",
-    "print(c)"
+    "print(c) # 단어의 attention 이 반영된 최종결과물"
    ]
   },
   {
@@ -242,15 +242,15 @@
     "        self.params, self.grads = [], []\n",
     "        self.cache = None\n",
     "\n",
-    "    def forward(self, hs, a):\n",
+    "    def forward(self, hs, a): \n",
     "        N, T, H = hs.shape\n",
     "\n",
     "        ar = a.reshape(N, T, 1).repeat(T, axis=1)\n",
-    "        t = hs * ar\n",
-    "        c = np.sum(t, axis=1)\n",
+    "        t = hs * ar # 확률을 곱함   \n",
+    "        c = np.sum(t, axis=1) # 확률 곱한 것을 세로로 합치면 I 를 추론할 때 \"나\" 라는 것이 80% 반영된 값\n",
     "\n",
     "        self.cache = (hs, ar)\n",
-    "        return c\n",
+    "        return c # affine 층으로 전달\n",
     "\n",
     "    def backward(self, dc):\n",
     "        hs, ar = self.cache\n",
@@ -269,16 +269,16 @@
     "        self.softmax = Softmax()\n",
     "        self.cache = None\n",
     "\n",
-    "    def forward(self, hs, h):\n",
+    "    def forward(self, hs, h): # 각 LSTM에서 decoder로 넘어온 출력 h와 encoder에서 넘어온 출력 hs\n",
     "        N, T, H = hs.shape\n",
     "\n",
-    "        hr = h.reshape(N, 1, H).repeat(T, axis=1)\n",
+    "        hr = h.reshape(N, 1, H).repeat(T, axis=1) # h 와 hs 형상 맞춰서 곱\n",
     "        t = hs * hr\n",
-    "        s = np.sum(t, axis=2)\n",
-    "        a = self.softmax.forward(s)\n",
+    "        s = np.sum(t, axis=2) # 열간 합을 하여 내적 구함 \n",
+    "        a = self.softmax.forward(s) # softmax로 normalization \n",
     "\n",
     "        self.cache = (hs, hr)\n",
-    "        return a\n",
+    "        return a # 이 a는 WeightSum 으로 보냄\n",
     "\n",
     "    def backward(self, da):\n",
     "        hs, hr = self.cache\n",
