--- a/ch08/8_2.ipynb
+++ b/ch08/8_2.ipynb
@@ -38,10 +38,10 @@
     "        affine_W = (rn(2*H, V) / np.sqrt(2*H)).astype('f')\n",
     "        affine_b = np.zeros(V).astype('f')\n",
     "\n",
-    "        self.embed = TimeEmbedding(embed_W)\n",
+    "        self.embed = TimeEmbedding(embed_W) \n",
     "        self.lstm = TimeLSTM(lstm_Wx, lstm_Wh, lstm_b, stateful=True)\n",
     "        self.attention = TimeAttention()\n",
-    "        self.affine = TimeAffine(affine_W, affine_b)\n",
+    "        self.affine = TimeAffine(affine_W, affine_b) # attention에서 return 한 것과 밑에서 올라온 것 두 개가 입력으로 들어가고, TimeAffine에서 합쳐지도록 되어있음  \n",
     "        layers = [self.embed, self.lstm, self.attention, self.affine]\n",
     "\n",
     "        self.params, self.grads = [], []\n",
@@ -50,11 +50,11 @@
     "            self.grads += layer.grads\n",
     "\n",
     "    def forward(self, xs, enc_hs):\n",
-    "        h = enc_hs[:,-1]\n",
+    "        h = enc_hs[:,-1] # 모든 행의 마지막 열 \n",
     "        self.lstm.set_state(h)\n",
     "\n",
-    "        out = self.embed.forward(xs)\n",
-    "        dec_hs = self.lstm.forward(out)\n",
+    "        out = self.embed.forward(xs) # <sos> I am a cat 다섯개 embed가 속에 존재, 따라서 5개의 벡터표현이 return \n",
+    "        dec_hs = self.lstm.forward(out) # 모여서 나온 것들이 각각의 LSTM 에 들어감 \n",
     "        c = self.attention.forward(enc_hs, dec_hs)\n",
     "        out = np.concatenate((c, dec_hs), axis=2)\n",
     "        score = self.affine.forward(out)\n",
