--- a/ch10/10.1 bert_finetune_NSMC.ipynb
+++ b/ch10/10.1 bert_finetune_NSMC.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "!pip install transformers"
+    "!pip install transformers # bert는 transformer 일종"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "BATCH_SIZE = 32\n",
     "NUM_EPOCHS = 3\n",
     "VALID_SPLIT = 0.2\n",
-    "MAX_LEN = 39 # EDA에서 추출된 Max Length\n",
+    "MAX_LEN = 39 # EDA에서 추출된 Max Length 문장 39개단어의 문장이 maximum\n",
     "DATA_IN_PATH = 'data_in/KOR'\n",
     "DATA_OUT_PATH = \"data_out/KOR\""
    ]
@@ -123,7 +123,7 @@
    "source": [
     "test_sentence = \"안녕하세요, 반갑습니다.\"\n",
     "\n",
-    "encode = tokenizer.encode(test_sentence)\n",
+    "encode = tokenizer.encode(test_sentence) # bert는 word piece tokenizer 기법으로 token 생성. 차후 # # 을 줄여나가는 방식으로 빈도 수 를 세서 빈도가 많은 것은 merge. 예를 들어 \"니다\"는 자주 나오기 때문에 \"# # 니\" \"# # 다\" 에서 \"# # 니다\" 로 merge 됨\n",
     "token_print = [tokenizer.decode(token) for token in encode]\n",
     "\n",
     "print(encode)\n",
@@ -317,7 +317,7 @@
     "        \n",
     "    )\n",
     "    \n",
-    "    input_id = encoded_dict['input_ids']\n",
+    "    input_id = encoded_dict['input_ids'] # \n",
     "    attention_mask = encoded_dict['attention_mask'] # And its attention mask (simply differentiates padding from non-padding).\n",
     "    token_type_id = encoded_dict['token_type_ids'] # differentiate two sentences\n",
     "    \n",
@@ -357,7 +357,7 @@
     "token_type_ids = []\n",
     "train_data_labels = []\n",
     "\n",
-    "for train_sent, train_label in tqdm(zip(train_data[\"document\"], train_data[\"label\"]), total=len(train_data)):\n",
+    "for train_sent, train_label in tqdm(zip(train_data[\"document\"], train_data[\"label\"]), total=len(train_data)): # tqdm은 진행률을 보여주는 것 \n",
     "    try:\n",
     "        input_id, attention_mask, token_type_id = bert_tokenizer(train_sent, MAX_LEN)\n",
     "        \n",
@@ -378,7 +378,7 @@
     "\n",
     "train_data_labels = np.asarray(train_data_labels, dtype=np.int32) #레이블 토크나이징 리스트\n",
     "\n",
-    "print(\"# sents: {}, # labels: {}\".format(len(train_movie_input_ids), len(train_data_labels)))"
+    "print(\"# sents: {}, # labels: {}\".format(len(train_movie_input_ids), len(train_data_labels))) # 15만번 돌았다 -> train data가 15만개의 토큰으로 분리되었다 "
    ]
   },
   {
@@ -406,7 +406,7 @@
    ],
    "source": [
     "# 최대 길이: 39\n",
-    "input_id = train_movie_input_ids[1]\n",
+    "input_id = train_movie_input_ids[1] # 인풋 데이터의 id 데이터\n",
     "attention_mask = train_movie_attention_masks[1]\n",
     "token_type_id = train_movie_type_ids[1]\n",
     "\n",
@@ -493,7 +493,7 @@
     "        self.dropout = tf.keras.layers.Dropout(self.bert.config.hidden_dropout_prob)\n",
     "        self.classifier = tf.keras.layers.Dense(num_class, \n",
     "                                                kernel_initializer=tf.keras.initializers.TruncatedNormal(self.bert.config.initializer_range), \n",
-    "                                                name=\"classifier\")\n",
+    "                                                name=\"classifier\") # 긍정 부정밖에 없으므로 이진분류\n",
     "        \n",
     "    def call(self, inputs, attention_mask=None, token_type_ids=None, training=False):\n",
     "        \n",
@@ -568,6 +568,7 @@
     "model_name = \"tf2_bert_naver_movie\"\n",
     "\n",
     "# overfitting을 막기 위한 ealrystop 추가\n",
+    "# 이전에 훈련한 val_accuracy가 지금 훈련한 val_accuracy 차이가 0.0001 이상 안 나는 게 patience 만큼 발생하면 자동으로 훈련종료\n",
     "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001,patience=2)\n",
     "# min_delta: the threshold that triggers the termination (acc should at least improve 0.0001)\n",
     "# patience: no improvment epochs (patience = 1, 1번 이상 상승이 없으면 종료)\\\n",
