--- a/ch10/10.4 bert_finetune_KorSTS.ipynb
+++ b/ch10/10.4 bert_finetune_KorSTS.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "# STS: 두가지 문장의 유사도 표현\n",
     "import os\n",
     "import tensorflow as tf\n",
     "from transformers import BertTokenizer, TFBertModel\n",
